ca_bug_ces_morts_sur_la_co

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=7581099be958ff636eb282fbac85434d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:kaouakib1987@127.0.0.1:3306/onremuesainte?serverVersion=8.0.34"
+DATABASE_URL="mysql://root:kaouakib1987@127.0.0.1:3306/onremuesainte2?serverVersion=8.0.34"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
